// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Builder Regenerate custom Hero 1`] = `
Object {
  "@type": "@jsx-lite/component",
  "children": Array [
    Object {
      "@type": "@jsx-lite/node",
      "bindings": Object {
        "css": "{
  display: \\"flex\\",
  flexDirection: \\"column\\",
  alignItems: \\"stretch\\",
  position: \\"relative\\",
  flexShrink: \\"0\\",
  boxSizing: \\"border-box\\",
  marginTop: \\"200px\\"
}",
        "height": "400",
      },
      "children": Array [],
      "meta": Object {},
      "name": "Hero",
      "properties": Object {
        "buttonLink": "https://example.com",
        "buttonText": "Click",
        "image": "https://cdn.builder.io/api/v1/image/assets%2FYJIGb4i01jvw0SRdL5Bt%2F52dcecf48f9c48cc8ddd8f81fec63236",
        "title": "Your Title Here",
      },
    },
  ],
  "hooks": Object {},
  "imports": Array [
    Object {
      "imports": Object {
        "Hero": "Hero",
      },
      "path": "@builder.io/components",
    },
  ],
  "meta": Object {},
  "name": "MyComponent",
  "state": Object {},
}
`;

exports[`Builder Regenerate custom Hero 2`] = `
Object {
  "data": Object {
    "blocks": Array [
      Object {
        "@type": "@builder.io/sdk:Element",
        "actions": Object {},
        "bindings": Object {},
        "children": Array [],
        "code": Object {
          "actions": Object {},
          "bindings": Object {},
        },
        "component": Object {
          "name": "Hero",
          "options": Object {
            "buttonLink": "https://example.com",
            "buttonText": "Click",
            "height": 400,
            "image": "https://cdn.builder.io/api/v1/image/assets%2FYJIGb4i01jvw0SRdL5Bt%2F52dcecf48f9c48cc8ddd8f81fec63236",
            "title": "Your Title Here",
          },
        },
        "responsiveStyles": Object {
          "large": Object {
            "alignItems": "stretch",
            "boxSizing": "border-box",
            "display": "flex",
            "flexDirection": "column",
            "flexShrink": "0",
            "marginTop": "200px",
            "position": "relative",
          },
        },
      },
    ],
    "jsCode": "Object.assign(state, {});
",
    "tsCode": "useState({});
",
  },
}
`;

exports[`Builder Regenerate custom Hero 3`] = `
Object {
  "@type": "@jsx-lite/component",
  "children": Array [
    Object {
      "@type": "@jsx-lite/node",
      "bindings": Object {
        "css": "{\\"display\\":\\"flex\\",\\"flexDirection\\":\\"column\\",\\"alignItems\\":\\"stretch\\",\\"position\\":\\"relative\\",\\"flexShrink\\":\\"0\\",\\"boxSizing\\":\\"border-box\\",\\"marginTop\\":\\"200px\\"}",
        "height": "400",
      },
      "children": Array [],
      "meta": Object {},
      "name": "Hero",
      "properties": Object {
        "buttonLink": "https://example.com",
        "buttonText": "Click",
        "image": "https://cdn.builder.io/api/v1/image/assets%2FYJIGb4i01jvw0SRdL5Bt%2F52dcecf48f9c48cc8ddd8f81fec63236",
        "title": "Your Title Here",
      },
    },
  ],
  "hooks": Object {},
  "imports": Array [],
  "meta": Object {},
  "name": "MyComponent",
  "state": Object {},
}
`;

exports[`Builder Regenerate fragments 1`] = `
Object {
  "@type": "@jsx-lite/component",
  "children": Array [
    Object {
      "@type": "@jsx-lite/node",
      "bindings": Object {},
      "children": Array [
        Object {
          "@type": "@jsx-lite/node",
          "bindings": Object {},
          "children": Array [],
          "meta": Object {},
          "name": "div",
          "properties": Object {
            "_text": "
      Hello world

      ",
          },
        },
        Object {
          "@type": "@jsx-lite/node",
          "bindings": Object {},
          "children": Array [
            Object {
              "@type": "@jsx-lite/node",
              "bindings": Object {},
              "children": Array [],
              "meta": Object {},
              "name": "div",
              "properties": Object {
                "_text": "
        ",
              },
            },
            Object {
              "@type": "@jsx-lite/node",
              "bindings": Object {},
              "children": Array [
                Object {
                  "@type": "@jsx-lite/node",
                  "bindings": Object {},
                  "children": Array [],
                  "meta": Object {},
                  "name": "div",
                  "properties": Object {
                    "_text": "Hi",
                  },
                },
              ],
              "meta": Object {},
              "name": "Fragment",
              "properties": Object {},
            },
            Object {
              "@type": "@jsx-lite/node",
              "bindings": Object {},
              "children": Array [],
              "meta": Object {},
              "name": "div",
              "properties": Object {
                "_text": "
      ",
              },
            },
          ],
          "meta": Object {},
          "name": "Fragment",
          "properties": Object {},
        },
        Object {
          "@type": "@jsx-lite/node",
          "bindings": Object {},
          "children": Array [],
          "meta": Object {},
          "name": "div",
          "properties": Object {
            "_text": "
    ",
          },
        },
      ],
      "meta": Object {},
      "name": "Fragment",
      "properties": Object {},
    },
  ],
  "hooks": Object {},
  "imports": Array [],
  "meta": Object {},
  "name": "MyComponent",
  "state": Object {},
}
`;

exports[`Builder Regenerate fragments 2`] = `
Object {
  "data": Object {
    "blocks": Array [
      Object {
        "@type": "@builder.io/sdk:Element",
        "actions": Object {},
        "bindings": Object {},
        "children": Array [
          Object {
            "@type": "@builder.io/sdk:Element",
            "bindings": Object {},
            "component": Object {
              "name": "Text",
              "options": Object {
                "text": "
      Hello world

      ",
              },
            },
            "tagName": "span",
          },
          Object {
            "@type": "@builder.io/sdk:Element",
            "actions": Object {},
            "bindings": Object {},
            "children": Array [
              Object {
                "@type": "@builder.io/sdk:Element",
                "actions": Object {},
                "bindings": Object {},
                "children": Array [
                  Object {
                    "@type": "@builder.io/sdk:Element",
                    "bindings": Object {},
                    "component": Object {
                      "name": "Text",
                      "options": Object {
                        "text": "Hi",
                      },
                    },
                    "tagName": "span",
                  },
                ],
                "code": Object {
                  "actions": Object {},
                  "bindings": Object {},
                },
                "component": Object {
                  "name": "Fragment",
                  "options": Object {},
                },
              },
            ],
            "code": Object {
              "actions": Object {},
              "bindings": Object {},
            },
            "component": Object {
              "name": "Fragment",
              "options": Object {},
            },
          },
        ],
        "code": Object {
          "actions": Object {},
          "bindings": Object {},
        },
        "component": Object {
          "name": "Fragment",
          "options": Object {},
        },
      },
    ],
    "jsCode": "Object.assign(state, {});
",
    "tsCode": "useState({});
",
  },
}
`;

exports[`Builder Regenerate fragments 3`] = `
Object {
  "@type": "@jsx-lite/component",
  "children": Array [
    Object {
      "@type": "@jsx-lite/node",
      "bindings": Object {},
      "children": Array [
        Object {
          "@type": "@jsx-lite/node",
          "bindings": Object {},
          "children": Array [
            Object {
              "@type": "@jsx-lite/node",
              "bindings": Object {
                "_text": undefined,
              },
              "children": Array [],
              "meta": Object {},
              "name": "div",
              "properties": Object {
                "_text": "
      Hello world

      ",
              },
            },
          ],
          "meta": Object {},
          "name": "div",
          "properties": Object {},
        },
        Object {
          "@type": "@jsx-lite/node",
          "bindings": Object {},
          "children": Array [
            Object {
              "@type": "@jsx-lite/node",
              "bindings": Object {
                "css": undefined,
              },
              "children": Array [
                Object {
                  "@type": "@jsx-lite/node",
                  "bindings": Object {
                    "_text": undefined,
                  },
                  "children": Array [],
                  "meta": Object {},
                  "name": "div",
                  "properties": Object {
                    "_text": "Hi",
                  },
                },
              ],
              "meta": Object {},
              "name": "Fragment",
              "properties": Object {},
            },
          ],
          "meta": Object {},
          "name": "Fragment",
          "properties": Object {},
        },
      ],
      "meta": Object {},
      "name": "Fragment",
      "properties": Object {},
    },
  ],
  "hooks": Object {},
  "imports": Array [],
  "meta": Object {},
  "name": "MyComponent",
  "state": Object {},
}
`;
